# switchboard

./: BUILD_MACOS.md  Cargo.toml  README.md  build-macos-app.sh
crates/switchboard-core/: Cargo.toml
crates/switchboard-core/src/: executor.rs  lib.rs  models.rs  orchestration.rs  persistence.rs  store.rs  store_test.rs
crates/switchboard-core/src/run_environment/: local.rs  mod.rs  ssh.rs
crates/switchboard-core/tests/: workflow_tests.rs
crates/switchboard-ui/: Cargo.toml
crates/switchboard-ui/src/: app.rs  main.rs
