[package]
name = "switchboard-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
ssh2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sled = "0.34"
bincode = "1.3"
directories = "5.0"
