[package]
name = "switchboard-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
ssh2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
directories = "5.0"
anyhow = "1.0.101"
sha2 = "0.10.9"
flate2 = "1.1.9"
hex = "0.4.3"
